HFP-2317 Fix BQ title text alignment if BQ is first node

--- a/branchingQuestion.css
+++ b/branchingQuestion.css
@@ -27,6 +27,7 @@
 
 .h5p-branching-question-title p {
   margin-top: 0;
+  text-align: left;
 }
 
 .h5p-branching-question-alternative {
